add buid, changed the type of studentID
